- in DB speak the database owner is customarily called dbo, hence use that

--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -20,7 +20,7 @@ Dieses Skript installiert die Datenbankstruktur f¸r die AMIS-
 Medikamentendatenbank.
 
 Die Haupt-Datenbankstruktur muﬂ bereits in einer Datenbank "gnumed"
-installiert sein, ebenso muﬂ mindestens der Nutzer gm-dbowner
+installiert sein, ebenso muﬂ mindestens der Nutzer gm-dbo
 bereits existieren.
 $description$
 
@@ -69,7 +69,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -94,7 +94,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.6  2004-11-24 15:36:31  ncq
+# Revision 1.7  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.6  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.5  2004/03/14 22:32:04  ncq
