--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -20,7 +20,7 @@ This script installs data into a GnuMed database system in
 order to localise GnuMed for Australia.
 
 The core database schema must have been imported into a database
-"gnumed" already. Also, the user gm-dbowner must exist.
+"gnumed" already. Also, the user gm-dbo must exist.
 
 $description$
 
@@ -74,7 +74,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -99,7 +99,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.11  2004-11-24 15:36:31  ncq
+# Revision 1.12  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.11  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.10  2004/04/28 09:53:56  ihaywood
