--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
@@ -20,7 +20,7 @@ Dieses Skript installiert Daten in ein GnuMed-Datenbanksystem,
 mit denen GnuMed für Deutschland angepaßt wird.
 
 Die Datenbankstruktur muß bereits in einer Datenbank "gnumed"
-installiert sein, ebenso muß mindestens der Nutzer gm-dbowner
+installiert sein, ebenso muß mindestens der Nutzer gm-dbo
 bereits existieren.
 
 Für die Medikamentendatenbank AMIS werden nur die Tabellen
@@ -131,7 +131,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -156,7 +156,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.19  2004-11-24 15:36:31  ncq
+# Revision 1.20  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.19  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.18  2004/06/26 22:52:45  ncq
