--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -17,7 +17,7 @@ keep temp files = no
 
 description = $description$
 This script installs test data into an existing GnuMed database
-named "gnumed". Also, the database owner "gm-dbowner" must exist
+named "gnumed". Also, the database owner "gm-dbo" must exist
 already.
 $description$
 
@@ -88,7 +88,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -113,7 +113,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.8  2004-11-24 15:36:31  ncq
+# Revision 1.9  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.8  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.7  2004/05/13 00:11:30  ncq
