--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.28 $
+version = $Revision: 1.29 $
 
 #----------------------------------
 [installation]
@@ -176,7 +176,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 password = 
 
 [user postgres]
@@ -241,7 +241,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.28  2004-11-24 15:36:31  ncq
+# Revision 1.29  2005-01-12 14:47:49  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.28  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.27  2004/11/07 11:47:57  ncq
