--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -113,7 +113,7 @@ $schema$
 # users
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -164,7 +164,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.17  2004-11-24 15:36:31  ncq
+# Revision 1.18  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.17  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.16  2004/07/17 20:57:53  ncq
