--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -125,7 +125,7 @@ $schema$
 
 #----------------------------------
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 #password = 
 
 [user postgres]
@@ -175,7 +175,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.9  2004-11-24 15:36:31  ncq
+# Revision 1.10  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.9  2004/11/24 15:36:31  ncq
 # - add option "keep temp files"
 #
 # Revision 1.8  2004/07/17 20:57:53  ncq
