--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
@@ -211,7 +211,7 @@ $language library dirs$
 # - it is not intended to be used as an everyday account
 # - it's also the one used to set up other GnuMed accounts
 [user GnuMed owner]
-name = gm-dbowner
+name = gm-dbo
 
 # - if this option is commented out and interactive is
 #   "yes" the user will be asked for the password, if we
@@ -270,7 +270,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard.conf.template,v $
-# Revision 1.19  2004-12-06 21:12:01  ncq
+# Revision 1.20  2005-01-12 14:47:48  ncq
+# - in DB speak the database owner is customarily called dbo, hence use that
+#
+# Revision 1.19  2004/12/06 21:12:01  ncq
 # - document "keep temp files" option
 #
 # Revision 1.18  2003/11/28 10:00:41  ncq
