--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -40,9 +40,9 @@ registration database = core
 schema base directory = ../sql/country.specific/au/
 schema = $schema$
 gmDemographics.au.sql
-postcodes.au.sql
 gmReference.sql
 gmconfiguration.sql
+postcodes.au.sql
 $schema$
 
 #----------------------------------
@@ -99,7 +99,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.12  2005-01-12 14:47:48  ncq
+# Revision 1.13  2005-01-31 19:31:16  ncq
+# - put postcode import last so we find other errors earlier
+#
+# Revision 1.12  2005/01/12 14:47:48  ncq
 # - in DB speak the database owner is customarily called dbo, hence use that
 #
 # Revision 1.11  2004/11/24 15:36:31  ncq
