--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/web.xml
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/web.xml
@@ -48,47 +48,50 @@
 
 
   <!-- Struts Tag Library Descriptors 
-  <taglib>
-    <taglib-uri>http://struts.apache.org/tags-bean</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-bean.tld</taglib-location>
-  </taglib>
-
+  
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-html</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-html.tld</taglib-location>
+    <taglib-location>/tags/struts-html.tld</taglib-location>
   </taglib>
+  
+  <taglib>
+    <taglib-uri>http://struts.apache.org/tags-bean</taglib-uri>
+    <taglib-location>/WEB-INF/tags/struts-bean.tld</taglib-location>
+  </taglib>
+
 
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-logic</taglib-uri>
-    <taglib-location>/WEB-INF/lib/tlds/struts-logic.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-logic.tld</taglib-location>
   </taglib>
   
    <taglib>
     <taglib-uri>http://struts.apache.org/tags-bean-el</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-bean-el.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-bean-el.tld</taglib-location>
   </taglib>
 
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-html-el</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-html-el.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-html-el.tld</taglib-location>
   </taglib>
 
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-logic-el</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-logic-el.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-logic-el.tld</taglib-location>
   </taglib>
 
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-nested</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-nested.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-nested.tld</taglib-location>
   </taglib>
 
   <taglib>
     <taglib-uri>http://struts.apache.org/tags-tiles</taglib-uri>
-    <taglib-location>/WEB-INF/lib/struts-tiles.tld</taglib-location>
+    <taglib-location>/WEB-INF/tags/struts-tiles.tld</taglib-location>
   </taglib>
   
-  -->
+-->
+  
   
    <!-- Define reference to the user database for looking up roles -->
   <resource-env-ref>
