- add first names data

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.20 $
+version = $Revision: 1.21 $
 
 #----------------------------------
 [installation]
@@ -51,6 +51,7 @@ schema = $schema$
 gmDemographics.de.sql
 gmDemographics-Data.de.sql
 PLZ.sql
+gmVornamen.sql
 $schema$
 
 [service clinical-de]
@@ -156,7 +157,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.20  2005-01-12 14:47:48  ncq
+# Revision 1.21  2005-03-01 20:33:04  ncq
+# - add first names data
+#
+# Revision 1.20  2005/01/12 14:47:48  ncq
 # - in DB speak the database owner is customarily called dbo, hence use that
 #
 # Revision 1.19  2004/11/24 15:36:31  ncq
