- add $libdir to library search path ...

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.30 $
+version = $Revision: 1.31 $
 
 #----------------------------------
 [installation]
@@ -184,10 +184,11 @@ pg/SQL
 $procedural languages$
 
 language library dirs = $language library dirs$
+$libdir/
 /usr/lib/postgresql/
 /usr/lib/postgresql/lib/
 /usr/lib/pgsql/
-/usr/local/pgsql/lib
+/usr/local/pgsql/lib/
 $language library dirs$
 
 #----------------------------------
@@ -207,7 +208,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.30  2005-01-12 14:47:48  ncq
+# Revision 1.31  2005-03-01 20:34:22  ncq
+# - add $libdir to library search path ...
+#
+# Revision 1.30  2005/01/12 14:47:48  ncq
 # - in DB speak the database owner is customarily called dbo, hence use that
 #
 # Revision 1.29  2004/11/24 15:36:31  ncq
