- use aggregated translation file

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.21 $
+version = $Revision: 1.22 $
 
 #----------------------------------
 [installation]
@@ -32,9 +32,9 @@ $description$
 services = $services$
 demographics-de
 clinical-de
-documents-de
 reference-de
 AMIS
+Übersetzung
 $services$
 
 #----------------------------------
@@ -63,23 +63,11 @@ registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmClinical.de.sql
-gmClinical-Data.de.sql
 Impfstoffe.sql
 Impfplan-Prevenar.sql
 STIKO-Impfkalender.sql
 Impfplan-Influenza.sql
 Impfplan-FSME.sql
-$schema$
-
-[service documents-de]
-name = blobs
-version = 0.1
-database alias = core
-minimum postgresql version = 7.1
-registration database = core
-schema base directory = ../sql/country.specific/de/
-schema = $schema$
-gmBlobs-Data.de.sql
 $schema$
 
 [service reference-de]
@@ -102,6 +90,17 @@ registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmAMIS.de.sql
+$schema$
+
+[service Übersetzung]
+name = historica
+version = 0.1
+database alias = core
+minimum postgresql version = 7.1
+registration database = core
+schema base directory = ../sql/country.specific/de/
+schema = $schema$
+gmUebersetzung.sql
 $schema$
 
 #----------------------------------
@@ -157,7 +156,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.21  2005-03-01 20:33:04  ncq
+# Revision 1.22  2005-03-31 20:11:58  ncq
+# - use aggregated translation file
+#
+# Revision 1.21  2005/03/01 20:33:04  ncq
 # - add first names data
 #
 # Revision 1.20  2005/01/12 14:47:48  ncq
